Fix config for pingfederate console role mapping

--- a/pingfederate/instance/bin/ldap.properties
+++ b/pingfederate/instance/bin/ldap.properties
@@ -356,7 +356,7 @@ role.search.user.attribute=isMemberOf
 #   Example 2:
 #     role.search.attribute=uid
 #
-role.search.attribute=cn
+role.search.attribute=<DN>
 
 
 
