Maybe PingFederate is case sensitive for the role mapping ???

--- a/pingfederate/instance/bin/ldap.properties
+++ b/pingfederate/instance/bin/ldap.properties
@@ -459,7 +459,7 @@ role.search.filter=(member={1})
 #
 # Note:the auditor role overrides the privileges associated with assignment of
 # any other role for the same user.
-role.map.admin=cn=PFAdminGroup,ou=Groups,dc=example,dc=com
-role.map.cryptoManager=cn=PFCryptoGroup,ou=Groups,dc=example,dc=com
-role.map.auditor=cn=PFAuditorGroup,ou=Groups,dc=example,dc=com
-role.map.userAdmin=cn=PFUserAdminGroup,ou=Groups,dc=example,dc=com
+role.map.admin=cn=PFAdminGroup,ou=groups,dc=example,dc=com
+role.map.cryptoManager=cn=PFCryptoGroup,ou=groups,dc=example,dc=com
+role.map.auditor=cn=PFAuditorGroup,ou=groups,dc=example,dc=com
+role.map.userAdmin=cn=PFUserAdminGroup,ou=groups,dc=example,dc=com
