PingFederate auth to LDAP for console is case sensitive, this commit fixes it

--- a/pingfederate/instance/bin/ldap.properties
+++ b/pingfederate/instance/bin/ldap.properties
@@ -14,7 +14,7 @@ role.search.attribute=<DN>
 role.search.base=ou=groups,dc=example,dc=com
 role.search.subtree=true
 role.search.filter=(member={1})
-role.map.admin=cn=PFAdminGroup,ou=groups,dc=example,dc=com
-role.map.cryptoManager=cn=PFCryptoGroup,ou=groups,dc=example,dc=com
-role.map.auditor=cn=PFAuditorGroup,ou=groups,dc=example,dc=com
-role.map.userAdmin=cn=PFUserAdminGroup,ou=groups,dc=example,dc=com
+role.map.admin=cn=PFAdminGroup,ou=Groups,dc=example,dc=com
+role.map.cryptoManager=cn=PFCryptoGroup,ou=Groups,dc=example,dc=com
+role.map.auditor=cn=PFAuditorGroup,ou=Groups,dc=example,dc=com
+role.map.userAdmin=cn=PFUserAdminGroup,ou=Groups,dc=example,dc=com
