last attempt at making sense of this console authz

--- a/pingfederate/instance/bin/ldap.properties
+++ b/pingfederate/instance/bin/ldap.properties
@@ -11,7 +11,7 @@ role.auditor=
 role.userAdmin=
 role.search.user.attribute=isMemberOf
 role.search.attribute=<DN>
-role.search.base=ou=groups,dc=example,dc=com
+role.search.base=ou=Groups,dc=example,dc=com
 role.search.subtree=true
 role.search.filter=(member={1})
 role.map.admin=cn=PFAdminGroup,ou=Groups,dc=example,dc=com
