--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,3 +1,7 @@
+# Use this file to test your server-profiles that are pushed to github.
+# To use different profiles in this repo, change the SERVER_PROFILE_PATH
+# When using your own repo, change the SERVER_PROFILE_URL as well. 
+
 version: "3.1"
 
 services:
