--- a/monitoring/pingfederate/jolokia-simple/instance/server/default/deploy/jolokia/WEB-INF/web.xml
+++ b/monitoring/pingfederate/jolokia-simple/instance/server/default/deploy/jolokia/WEB-INF/web.xml
@@ -155,7 +155,7 @@
   <!-- ARNO: prevent entering the servlet for write and execute calls -->
   <servlet-mapping>
     <servlet-name>jolokia-agent</servlet-name>
-    <url-pattern>/jolokia/*</url-pattern>
+    <url-pattern>/*</url-pattern>
   </servlet-mapping>
   <!-- <servlet-mapping>
     <servlet-name>jolokia-agent</servlet-name>
