--- a/pa-clustering/docker-compose.yaml
+++ b/pa-clustering/docker-compose.yaml
@@ -2,7 +2,7 @@ version: "3.1"
 
 services:
   pingaccess:
-    image: pingidentity/pingaccess:${PING_IDENTITY_DEVOPS_TAG}
+    image: pingidentity/pingaccess:5.2.3-edge
     healthcheck:
       test: ["CMD", "curl", "-f", "-k", "https://pingaccess:9000/pa/heartbeat.ping"]
       interval: 10s
@@ -12,8 +12,8 @@ services:
       - SERVER_PROFILE_PATH=pa-clustering/pingaccess
       - OPERATIONAL_MODE=CLUSTERED_CONSOLE
       - PA_CONSOLE_HOST=pingaccess
-    #env_file:
-    #  - ~/.pingidentity/devops    
+    env_file:
+     - ~/.pingidentity/devops    
     #volumes:
       #- ${HOME}/<PATH_TO_LOCAL_REPO>/pingaccess-clustered/pingaccess:/opt/in
     ports:
@@ -25,15 +25,15 @@ services:
       - NET_ADMIN
 
   pingaccess-engine:
-    image: pingidentity/pingaccess:${PING_IDENTITY_DEVOPS_TAG}
+    image: pingidentity/pingaccess:5.2.3-edge
     command: wait-for pingaccess:9000 -t 420 -- entrypoint.sh start-server
     environment: 
       - SERVER_PROFILE_URL=https://github.com/pingidentity/pingidentity-server-profiles.git
       - SERVER_PROFILE_PATH=pa-clustering/pingaccess
       - OPERATIONAL_MODE=CLUSTERED_ENGINE
       - PA_CONSOLE_HOST=pingaccess
-    #env_file:
-    #  - ~/.pingidentity/devops      
+    env_file:
+     - ~/.pingidentity/devops      
     #volumes:
     #  - ${HOME}/<PATH_TO_LOCAL_REPO>/pingaccess-clustered/pingaccess:/opt/in
     ports:
