baseline to PA 6.0.0

--- a/baseline/pingaccess/instance/conf/run.properties
+++ b/baseline/pingaccess/instance/conf/run.properties
@@ -130,7 +130,7 @@ engine.httptransport.ioThreads=0
 engine.websocket.maxConnections=-1
 
 # Including TLS 1.0 for end-user browser compatibility with IE 9 and IE 10
-engine.ssl.protocols=TLSv1, TLSv1.1, TLSv1.2
+engine.ssl.protocols=TLSv1, TLSv1.1, TLSv1.2, TLSv1.3
 engine.ssl.ciphers=${tls.default.cipherSuites}
 
 # Client connections
@@ -206,9 +206,12 @@ pa.interceptors.relativepath.decode.regex=[\\p{Po}\\p{N}\\p{Z}\\p{L}\\p{M}\\p{Zs
 # TLS/SSL
 #-------------------------------------------------------------------------------
 
-tls.default.protocols = TLSv1.1, TLSv1.2
+tls.default.protocols = TLSv1.1, TLSv1.2, TLSv1.3
 
-tls.default.cipherSuites = TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,\
+tls.default.cipherSuites = TLS_CHACHA20_POLY1305_SHA256,\
+                           TLS_AES_256_GCM_SHA384,\
+                           TLS_AES_128_GCM_SHA256,\
+                           TLS_ECDHE_ECDSA_WITH_AES_128_GCM_SHA256,\
                            TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256,\
                            TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA256,\
                            TLS_ECDHE_ECDSA_WITH_AES_128_CBC_SHA256,\
@@ -271,7 +274,7 @@ pf.api.readTimeout=-1
 #-------------------------------------------------------------------------------
 
 pa.backup.filesToKeep=25
-pa.admin.user.password.regex=((?=.*\\d)(?=.*[a-z])(?=.*[A-Z]).{6,64})
+pa.admin.user.password.regex=((?\=.*\\d)(?\=.*[a-z])(?\=.*[A-Z]).{6,64})
 pa.admin.user.password.error.message=Password must be 6 to 64 characters in length, and contain at least one upper-case letter, one lower-case letter and one digit.
 pa.admin.test.connections=true
 
@@ -408,3 +411,6 @@ pa.cluster.serverstate.timeToIdleSeconds=86400
 pa.cluster.serverstate.staleEntryEvictionIntervalSeconds=60
 # This property is only used if pa.cluster.interprocess.communication is not none
 pa.cluster.serverstate.replicationIntervalMilliseconds=1000
+
+# mbean settings
+pa.mbean.site.connection.pool.enable=false
