--- a/.github/workflows/deploy-pingfederate.yaml
+++ b/.github/workflows/deploy-pingfederate.yaml
@@ -1,9 +1,8 @@
-name: Deploy to ECR
-
+# You must have enabled GitHub Actions for your Google Cloud Project as part of the cloud onboarding process to use this workflow.
+name: Deploy PF to GKE
 on:
- 
   push:
-    branches: [ master ]
+    tags: pf-v**
 
 env:
   # Set the base image repository and tag
