--- a/.github/workflows/deploy-pingfederate.yaml
+++ b/.github/workflows/deploy-pingfederate.yaml
@@ -66,7 +66,10 @@ jobs:
       run: |
         echo "Installing Helm..." \
         curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3
-        chmod 700 get_helm.sh  &&     ./get_helm.sh \
+        sleep 10s
+        chmod 700 get_helm.sh \
+        ./get_helm.sh \
+        sleep 5s
         echo "Helm installed" \
         helm repo add pingidentity https://helm.pingidentity.com/ \
         helm repo update \
