--- a/.github/workflows/deploy-pingfederate.yaml
+++ b/.github/workflows/deploy-pingfederate.yaml
@@ -16,7 +16,7 @@ env:
   EKS_CLUSTER_NAME: pingdevops-cluster 
   AWS_REGION: us-east-1
   #
-  STUDENT_NAMESPACE: "pingdevops-namespace-a"
+  STUDENT_NAMESPACE: "pingdevops-namespace-b"
   
   
 
