added healthcheck to pf deployment

--- a/.github/workflows/deploy-pingfederate.yaml
+++ b/.github/workflows/deploy-pingfederate.yaml
@@ -78,13 +78,17 @@ jobs:
     # Install Helm CLI for managing Kubernetes applications
     - name: Deploy Helm
       run: |
-        curl https://baltocdn.com/helm/signing.asc | gpg --dearmor | sudo tee /usr/share/keyrings/helm.gpg > /dev/null
-        sudo apt-get install apt-transport-https --yes
-        echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/helm.gpg] https://baltocdn.com/helm/stable/debian/ all main" | sudo tee /etc/apt/sources.list.d/helm-stable-debian.list
-        sudo apt-get update
-        sudo apt-get install helm
-        sleep 5s
-        echo "Helm installed"
+        # less secure: for dev
+        curl -fsSL https://raw.githubusercontent.com/helm/helm/main/scripts/get-helm-3 | bash
+        
+        # more secure: for prod
+        # curl https://baltocdn.com/helm/signing.asc | gpg --dearmor | sudo tee /usr/share/keyrings/helm.gpg > /dev/null
+        # sudo apt-get install apt-transport-https --yes
+        # echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/helm.gpg] https://baltocdn.com/helm/stable/debian/ all main" | sudo tee /etc/apt/sources.list.d/helm-stable-debian.list
+        # sudo apt-get update
+        # sudo apt-get install helm
+        # sleep 5s
+        # echo "Helm installed"
 
         # Add and update the PingIdentity Helm repository
         helm repo add pingidentity https://helm.pingidentity.com/ 
