--- a/.github/workflows/deploy-pingfederate.yaml
+++ b/.github/workflows/deploy-pingfederate.yaml
@@ -112,12 +112,9 @@ jobs:
       run: chmod +x .github/workflows/pingfederate-healthcheck.sh
 
     - name: Post Deployment Healthcheck - PingFederate Admin
-      env:
-        deployment_name: "pingfederate-admin"
-      run: .github/workflows/pingfederate-healthcheck.sh check_deployment_readiness
+      run: .github/workflows/pingfederate-healthcheck.sh check_deployment_readiness "pingfederate-admin" "$STUDENT_NAMESPACE" 300
 
     - name: Post Deployment Healthcheck - PingFederate Engine
       env:
-        deployment_name: "pingfederate-engine"
-      run: .github/workflows/pingfederate-healthcheck.sh check_deployment_readiness
+      run: .github/workflows/pingfederate-healthcheck.sh check_deployment_readiness "pingfederate-engine" "$STUDENT_NAMESPACE" 300
         
