--- a/.github/workflows/deploy-pingfederate.yaml
+++ b/.github/workflows/deploy-pingfederate.yaml
@@ -1,6 +1,6 @@
 
 # Ref: https://dlmade.medium.com/ci-cd-with-github-action-and-aws-eks-5fd9714010cd
-name: Deploy PF to GKE
+name: Deploy PF to EKS
 on:
   push:
     tags: pf-v**
@@ -112,8 +112,8 @@ jobs:
       run: chmod +x .github/workflows/health-check.sh
 
     - name: Post Deployment Healthcheck - PingFederate Admin
-      run: .github/workflows/health-check.sh check_deployment_readiness "pingfederate-admin" $STUDENT_NAMESPACE 300
+      run: .github/workflows/health-check.sh check_deployment_readiness "pingfederate-release-pingfederate-admin" $STUDENT_NAMESPACE 300
 
     - name: Post Deployment Healthcheck - PingFederate Engine
-      run: .github/workflows/pingfederate-healthcheck.sh check_deployment_readiness "pingfederate-engine" $STUDENT_NAMESPACE 300
+      run: .github/workflows/pingfederate-healthcheck.sh check_deployment_readiness "pingfederate-release-pingfederate-engine" $STUDENT_NAMESPACE 300
         
