--- a/.github/workflows/deploy-pingfederate.yaml
+++ b/.github/workflows/deploy-pingfederate.yaml
@@ -66,7 +66,7 @@ jobs:
         --build-arg PRODUCT=$PRODUCT \
         --build-arg BASE_IMAGE_TAG=$BASE_IMAGE_TAG \
         -t $ECR_REGISTRY/$ECR_REPOSITORY:$RELEASE_TAG \
-        -f baseline/pingfederate/Dockerfile .
+        -f baseline/pingfederate/Dockerfile
         echo "Image build completed"
         docker push $ECR_REGISTRY/$ECR_REPOSITORY:$RELEASE_TAG
         echo "Image push completed"
